--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
-    "angular": "~1.4.2"
+    "angular": "~1.4.2",
+    "angular-dragdrop": "~1.0.13"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
